2008-02-24  Raphael Ackermann <raphael.ackermann@gmail.com>
	* Editors/_EditRepository.py
	* Editors/_EditFamily.py
	* DisplayTabs/_SourceEmbedList.py
	* DisplayTabs/_PersonRefEmbedList.py
	* DisplayTabs/_RepoEmbedList.py
	* DisplayTabs/_AddrEmbedList.py
	* DisplayTabs/_WebEmbedList.py
	* DisplayTabs/_NameEmbedList.py
	* DisplayTabs/_EventEmbedList.py
	* DisplayTabs/_EmbeddedList.py
	* DisplayTabs/_NoteTab.py
	* DisplayTabs/_LocationEmbedList.py
	* DisplayTabs/_ButtonTab.py
	* DisplayTabs/_DataEmbedList.py
	* DisplayTabs/_AttrEmbedList.py
	* DisplayTabs/_LdsEmbedList.py
	* DisplayTabs/_GrampsTab.py
	add Up and Down buttons to the tabs. Added individual tooltips for buttons
	0001807: Missing buttons MoveUp, MoveDown on a Events list in a person... 

2008-02-22 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditPerson.py: Fixed crash on clicking OK to save name
	change. Bug #1783

2008-02-24  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletView.restore_gramplet): 
	Fixed restore minimized gramplet

2008-02-24  NOT Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/ViewManager.py:
	* src/DbLoader.py:
	Remove os.chdir, no longer needed for relative path

2008-02-24  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py: don't save deleted gramplets
	* src/glade/gramps.glade: changed tooltip from "close" to "delete"
	Gramplets are either undeleted before exit, or they go away

2008-02-24  Raphael Ackermann <raphael.ackermann@gmail.com>
	* various (294 files)
	pep8 doc fixes & pylint fixes

2008-02-23  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py (Date.get_stop_date): 
	added new method Date.to_calendar; dates return None if error

2008-02-23 Jerome Rapinat <romjerome@yahoo.fr>
	* configure.in : allow Slovenian support

2008-02-22  Raphael Ackermann <raphael.ackermann@gmail.com>
	* ViewManager.py
	* gen/db/iterator.py
	* gen/db/base.py
	* gen/db/dbconst.py
	* gen/db/cursor.py